<resources>
    <!-- OverViewConnectionsActivity -->
    <string name="app_name">TrustChain Android</string>
    <string name="dna_learning">Dna Learning</string>
    <string name="my_external_ip">My external ip is:</string>
    <string name="connect_bootstrap_ip">The IP address of the new bootstrap:</string>
    <string name="change_bootstrap">Change bootstrap</string>
    <string name="connect_bootstrap_ip_hint">130.161.211.254</string>
    <string name="my_local_ip">My local ip is:</string>
    <string name="connect_ip_hint">127.0.0.1</string>
    <string name="connect_port_hint">port</string>
    <string name="default_port">8080</string>
    <string name="connect_to">Connect to IP</string>
    <string name="connect">connect</string>
    <string name="view_chain">View Chain</string>
    <string name="reset_database_button">Clear Database (closes app)</string>
    <string name="last_received">Received: %s</string>
    <string name="last_sent">Sent: %s</string>
    <string name="last_received_hint">Received:</string>
    <string name="last_sent_hint">Sent: </string>
    <string name="peer_id">peer id</string>
    <string name="snackbar_peer_added">%s added to inbox</string>
    <string name="snackbar_no_pub_key">This peer didn\'t send a public key yet</string>
    <string name="snackbar_peer_inactive">This peer is currently not active</string>
    <string name="toast_app_running">The app is still running in background and consuming data</string>

    <!-- Trustchain -->
    <string name="title_activity_key">Key management</string>
    <string name="bluetooth_connection">bluetooth_connection</string>
    <string name="public_key">Public key</string>
    <string name="private_key">Private key</string>
    <string name="create_key">Create new key</string>
    <string name="show_key">Show key</string>
    <string name="verify_sig">Verify signature</string>
    <string name="storage_permission_explanation">Please give storage permissions</string>
    <string name="sign_data">Sign data!</string>
    <string name="valid_signature">Valid signature</string>
    <string name="invalid_signature">Invalid signature</string>
    <string name="chain_explorer">TrustChain Explorer</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="sign_block">Sign this block</string>

    <string name="item_public_key">Public key:</string>
    <string name="item_link_public_key">Link public key:</string>
    <string name="item_prev_hash">Previous hash:</string>
    <string name="item_signature">Signature:</string>
    <string name="item_transaction">Transaction:</string>

    <string name="bluetooth_explanation">First pair with a device via the Android bluetooth manager. After the two devices are paired press on the desired device to initiate a connection.</string>
    <string name="bluetooth_button">Bluetooth</string>
    <string name="qr_scan_button">Scan QR</string>
    <string name="camera_permissions_required">Camera permissions required</string>
    <string name="camera_permisions_required_long">To scan QR codes, the application needs permission to access the camera.</string>
    <string name="current_funds">Current Funds</string>

    <string name="send">Send</string>
    <string name="developer_mode">Developer Mode</string>

    <!-- Menu -->
    <string name="menu_chainexplorer">My Chain</string>
    <string name="menu_clear_inbox">Clear Entire Inbox</string>
    <string name="menu_info">Info</string>
    <string name="menu_receive_offline">Receive offline</string>
    <string name="menu_change_bootstrap">Change bootstrap</string>
    <string name="menu_import_tokens">Import Tokens</string>
    <string name="menu_export_tokens">Export Tokens</string>
    <string name="menu_funds">Funds</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_scan_passport">Scan Passport</string>
    <string name="menu_stress_test">Stats / Stress Test</string>

    <!--- app to app strings -->
    <string name="start_connection">Attempt connection</string>
    <string name="local_ip">Local IP</string>
    <string name="start_server_connection">Start server connection</string>
    <string name="client_socket">Client socket</string>
    <string name="server_socket">Server socket</string>
    <string name="stop_server">Stop server</string>
    <string name="close_connection">Delete All</string>
    <string name="pex_handshake_id">PEX handshake ID:</string>
    <string name="circle_symbol">●</string>
    <string name="indicator_symbol">▂</string>
    <string name="unknown">unknown</string>
    <string name="wan_address">WAN Address</string>
    <string name="ip">ip</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">outgoing</string>
    <string name="left_connections">Active Peers</string>
    <string name="right_connections">New Peers</string>
    <string name="left_connections_with_count">Active Peers (%d)</string>
    <string name="right_connections_with_count">New Peers (%d)</string>
    <string name="connection">Connection</string>
    <string name="connectable_ratio">Connectable\nratio</string>
    <string name="connectable_peers">Connectable\nPeers</string>
    <string name="active_peers">Active\nPeers</string>
    <string name="exit_prompt">Exit</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_info_chain_explorer">UserActivity</string>
    <string name="version">version %s</string>

    <!-- Connection explanation view -->
    <string name="symbolMeaningText">Meaning:</string>
    <string name="connectionInfoText">Explanations of texts and symbols of the connection overview.</string>
    <string name="symbolExplanationText">Explanation</string>
    <string name="connected">Connected with peer</string>
    <string name="connecting">Connecting with peer</string>
    <string name="cannot_connect">Cannot connect with peer</string>
    <string name="received_packet">Received a packet from peer</string>
    <string name="sent_packet">Sent a packet to peer</string>
    <string name="time_since_received">Time since last received message, lights up on message received"</string>
    <string name="time_since_sent">Time since last sent message, lights up on message sent</string>

    <!--- info chain explorer -->
    <string name="color_info">Color is based on the hash of the public key.</string>

    <!--- inbox -->
    <string name="new_user">+ Find new users</string>
    <string name="inbox">Open Inbox</string>

    <!-- OCR Scanning -->
    <string name="ocr_switch_to_manual">Manual Input</string>
    <string name="ocr_camera_permission_explanation">Please provide camera permissions in order to scan a document.</string>
    <string name="ocr_storage_permission_explanation">Please give storage permissions for scanning the text on the passport</string>
    <string name="ocr_camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="ocr_help_text">Scan the text at the bottom of the passport or on the backside of the ID card.</string>

    <!--Manual Input-->
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="docNum">Document number</string>
    <string name="expiryDate">Expiry date</string>
    <string name="dateBirth">Date of birth</string>
    <string name="hintDocNum">XXP100154</string>
    <string name="hintExpiryDate">yymmdd</string>
    <string name="hintDateBirth">yymmdd</string>
    <string name="manInputSubmit">Submit</string>
    <string name="errFormatDocNum">Input of document number is not correct, please recheck your input.</string>
    <string name="errFormatExpiryDate">Please fill in the expiry date of the document in the yymmdd format.</string>
    <string name="errFormatDateBirth">Please fill in the date of birth in the yymmdd format.</string>
    <string name="errInputDocNum">Please fill in the document number.</string>
    <string name="errInputExpiryDate">Please fill in the expiry date of the document.</string>
    <string name="errInputDateBirth">Please fill in the date of birth.</string>

    <!--NFC Scanning-->
    <string name="passportconnection">Connect to document</string>
    <string name="nfc_not_supported_error">This device does not support NFC.</string>
    <string name="nfc_disabled_error_snackbar">NFC is needed for the passport connection</string>
    <string name="nfc_disabled_snackbar_action">Turn on NFC</string>
    <string name="nfc_enabled">Please hold the travel document to the back of the device.</string>
    <string name="general_error">Could not connect, please make sure the travel document is compatible.</string>
    <string name="NFC_error">Could not complete NFC scan, please try again.</string>
    <string name="start_con_button">Start ID connection</string>
    <string name="scan_doc_details">Please scan the ID first</string>

    <string name="wrong_document_details">Document details are not inserted correctly</string>
    <string name="check_input">Check input</string>
    <string name="destination_address">destination_address</string>
    <string name="enter_bytes">Enter 8 bytes to sign</string>

    <!--PeerSummary-->
    <string name="valid_block">Valid block</string>
    <string name="seq_unknown">Unknown</string>
    <string name="sequenceNum">seq: %1$d</string>
    <string name="need_sign">Awaiting signing</string>
    <string name="invalid_block">Invalid block</string>
    <string name="no_file_selected">No file selected</string>
    <string name="warning_files">Note: sent files will be public</string>

    <string name="type_file">%s file</string>
    <string name="click_to_open_file">%s file\nClick to open</string>

    <!-- Stress test  -->
    <string name="nodes_to_start">Start additional peers</string>
    <string name="nodes_running">Number of additional peers</string>
    <string name="default_nodes_num">1</string>
    <string name="button_start_nodes">Start peers</string>
    <string name="button_stop_nodes">Stop peers</string>

    <!-- Stats -->
    <string name="stats_received_title">Received Stats</string>
    <string name="stats_messages_received">Total messages received:</string>
    <string name="stats_punctures">Punctures:</string>
    <string name="stats_puncture_requests">Puncture requests:</string>
    <string name="stats_introduction_requests">Introduction requests:</string>
    <string name="stats_introduction_responses">Introduction responses:</string>
    <string name="stats_block_messages">Block messages:</string>
    <string name="stats_sent">Sent Stats</string>
    <string name="stats_messages_sent">Total messages sent:</string>
    <string name="stats_uptime">Uptime:</string>
    <string name="stats_api_too_low">Stats will not be displayed because your API level is to low!</string>

    <!-- Offline block signing -->
    <string name="title_activity_send_offline">Send block offline</string>
    <string name="sending_block_beam">Sending block, hold receiver close</string>
    <string name="sending_block_beam_complete">Block was sent successfully</string>
    <string name="send_offline_checkbox_text">Send offline</string>
    <string name="qr_camera_permission_explanation">Camera permission is required in order to scan a QR code</string>
    <string name="receive_offline_explanation">Tap a sending device to receive a claim. Or press the button below to scan one from a QR coe</string>
    <string name="scan_qr_code">Scan a QR code</string>
    <string name="too_big_for_qr">This block is too big for a QR code! (%d out of max %d bytes)</string>
    <string name="enable_nfc">Enable NFC in your device settings before you can use Beam</string>
    <string name="button_send_qr_code">QR Code</string>
    <string name="button_send_android_beam">Android Beam</string>
    <string name="block_signed">Block signed and saved!</string>
    <string name="sign_and_return_block">Sign block and return to sender</string>
    <string name="title_activity_receive_offline">Receive block offline</string>
    <string name="receive_completed">Receive completed block</string>

    <string name="deny_permission">Deny</string>
    <string name="return_home">Return</string>
</resources>
