...
                android:id="@+id/active_peers_list_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

            <ListView
                android:id="@+id/new_peers_list_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/open_inbox_item"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
...
